--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,8 @@
   "name": "game-server",
   "version": "0.0.1",
   "description": "my first game",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.10.2",
+    "socket.io": "^1.3.5"
+  }
 }
